--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
   color: white;
   font-weight: bold;
   box-shadow: 8px 7px 15px -6px rgba(0, 0, 0, 0.94);
+  transition: 200ms;
 }
 .button a, button a {
   text-decoration: none;
@@ -15,26 +16,72 @@
 }
 .button:hover, button:hover {
   filter: brightness(105%);
+  box-shadow: 8px 7px 15px 0px rgba(0, 0, 0, 0.94);
 }
 
-* {
-  /* Firefox */
-  /* Safari */
+animacoeur, .carte .animacoeur {
+  position: relative;
+  font-size: 200%;
+  display: flex;
+  align-items: center;
+  margin: 25px;
+}
+animacoeur .vide, .carte .animacoeur .vide {
+  color: black;
+  transform: scale(1);
+  transition: 1s;
+}
+animacoeur .plein, .carte .animacoeur .plein {
+  position: absolute;
+  background: #FF79DA;
+  background: linear-gradient(45deg, #FF79DA 0%, #9356DC 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: 1s;
+  transform: scale(0);
+}
+animacoeur:hover .plein, .carte .animacoeur:hover .plein {
+  transform: scale(1);
+}
+animacoeur:hover .vide, .carte .animacoeur:hover .vide {
+  transform: scale(0);
+}
+
+footer {
+  background-color: rgb(50, 50, 50);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  padding-left: 8%;
+}
+footer h4 {
+  font-family: Shrikhand;
+  font-size: 20px;
+  font-weight: lighter;
+}
+footer .ftexte {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+footer .ficon {
+  margin: 0 10px 10px 0;
+  width: 20px;
+}
+footer p {
+  margin: 0 0 15px 0;
+}
+footer a {
+  text-decoration: none;
+  color: white;
+}
+
+* { /* Firefox */ /* Safari */
   box-sizing: border-box;
   list-style-type: none;
-  font-family: Roboto;
+  font-family: Roboto, "'Times New Roman', Times, serif", Shrikhand;
 }
 
-@media all and (min-width: 992px) {
-  body {
-    background-color: red;
-  }
-}
-@media all and (min-width: 1400px) {
-  body {
-    background-color: blue;
-  }
-}
 nav {
   display: flex;
   justify-content: center;
@@ -70,4 +117,158 @@ form [type=search] {
   align-items: center;
   flex-direction: column;
   width: 100%;
+}
+
+.fonctionnement {
+  width: 100%;
+  margin-bottom: 10%;
+}
+.fonctionnement h2 {
+  display: flex;
+  margin-left: 8%;
+}
+
+.fonctioncard {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
+
+.card {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 80%;
+  background-color: rgb(243, 243, 243);
+  border-radius: 20px;
+  padding-right: 15%;
+  margin-bottom: 8%;
+  box-shadow: 8px 7px 15px -6px rgba(0, 0, 0, 0.7);
+}
+.card .number {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 25px;
+  height: 30px;
+  width: 30px;
+  background-color: #9356DC;
+  color: white;
+  position: relative;
+  left: -12px;
+}
+.card .icon {
+  color: #9356DC;
+}
+.card:hover {
+  background-color: rgb(239, 233, 239);
+}
+.card:hover .icon {
+  filter: brightness(115%);
+}
+
+.restaurants {
+  padding-top: 5%;
+  background-color: rgb(243, 243, 243);
+  width: 100%;
+}
+.restaurants h2 {
+  padding-left: 8%;
+}
+
+.menus {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.carte {
+  border-radius: 15px;
+  box-shadow: 8px 7px 15px -6px rgba(0, 0, 0, 0.7);
+  width: 85%;
+  margin-bottom: 5%;
+  position: relative;
+}
+.carte img {
+  border-radius: 15px 15px 0px 0px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 160px;
+  width: 100%;
+}
+.carte a {
+  text-decoration: none;
+}
+.carte .content {
+  display: flex;
+  justify-content: space-between;
+}
+.carte h3 {
+  margin: 15px 0 0 15px;
+  color: black;
+}
+.carte .lieu {
+  margin: 5px 0 20px 15px;
+  color: black;
+}
+.carte .new {
+  margin: 10px;
+  color: green;
+  background-color: lightgreen;
+  border-radius: 5px;
+  height: 30px;
+  width: 90px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+@media all and (min-width: 992px) {
+  body {
+    margin: auto;
+    background: #9356DC;
+    background: linear-gradient(to bottom, #9356DC 0%, #99E2D0 50%, #FF79DA 100%);
+  }
+  .formulaire {
+    width: 70%;
+  }
+  .introTexte {
+    width: 70%;
+  }
+  .fonctionnement {
+    width: 70%;
+    margin: auto;
+  }
+  .card {
+    width: 50%;
+    margin-bottom: 4%;
+  }
+  .restaurants {
+    width: 70%;
+    margin: auto;
+    padding-bottom: 5%;
+  }
+  .restaurants h2 {
+    padding-left: 10%;
+  }
+  .menus {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin: 5%;
+  }
+  .carte {
+    width: 45%;
+  }
+}
+@media all and (min-width: 1400px) {
+  .card {
+    width: 35%;
+    padding-right: 10%;
+  }
 }/*# sourceMappingURL=style.css.map */
