--- a/style.scss
+++ b/style.scss
@@ -1,24 +1,14 @@
 @import "./utils/variables";
 @import "./composants/button";
+@import "./composants/animacoeur";
+@import "./layout/footer";
 
 *{
     -moz-box-sizing    : border-box; /* Firefox */
     -webkit-box-sizing : border-box; /* Safari */
     box-sizing         : border-box;
     list-style-type: none;
-    font-family: Roboto;
-}
-
-@media all and (min-width: 992px){
-    body{
-        background-color: red;
-    }
-}
-
-@media all and (min-width: 1400px){
-    body{
-        background-color: blue;
-    }
+    font-family: Roboto, "'Times New Roman', Times, serif",Shrikhand;
 }
 
 nav{
@@ -55,10 +45,195 @@ button{
 }
 
 .introTexte{
-    background-color: rgb(243, 243, 243);
+    background-color: $color-background;
     height: 250px;
     display: flex;
     align-items: center;
     flex-direction: column;
     width: 100%;
+}
+
+.fonctionnement{
+    width: 100%;
+    margin-bottom: 10%;
+
+    h2{
+        display: flex;
+        margin-left: 8%;
+    }
+}
+
+.fonctioncard{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+}
+
+.card{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    background-color: $color-background; 
+    border-radius: 20px;
+    padding-right: 15%;
+    margin-bottom: 8%;
+    box-shadow: 8px 7px 15px -6px rgba(0,0,0,0.70);
+    
+    .number{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 25px;
+        height: 30px;
+        width: 30px;
+        background-color: $color-primary;
+        color: white;
+        position: relative;
+        left: -12px;
+    }
+
+    .icon{
+        color: $color-primary;
+    }
+
+    &:hover {
+        background-color: rgb(239, 233, 239);
+
+        .icon{
+            filter: brightness(115%);
+        }
+    }
+}
+
+.restaurants{
+    padding-top: 5%;
+    background-color: $color-background;
+    width: 100%;
+
+    h2{
+        padding-left: 8%;
+    }
+}
+
+.menus{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.carte{
+    border-radius: 15px;
+    box-shadow: 8px 7px 15px -6px rgba(0,0,0,0.70);
+    width: 85%;
+    margin-bottom: 5%;
+    position: relative;
+
+    img{
+       border-radius: 15px 15px 0px 0px;
+        object-fit: cover;
+        height: 160px;
+        width: 100%; 
+    }
+
+    a{
+        text-decoration: none;
+    }
+
+    .content{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    h3{
+        margin: 15px 0 0 15px;
+        color: black;
+    }
+
+    .lieu{
+        margin: 5px 0 20px 15px;
+        color: black;
+    }
+
+    .new{
+        margin: 10px;
+        color: green;
+        background-color: lightgreen;
+        border-radius: 5px;
+        height: 30px;
+        width: 90px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+
+    .animacoeur{
+        @extend animacoeur
+    }
+}
+
+footer{
+    @extend footer
+}
+
+@media all and (min-width: 992px){
+    body{
+        margin: auto;
+        background: $color-primary;
+        background: -moz-linear-gradient(top, $color-primary 0%, $color-tertiary 50%, $color-secondary 100%);
+        background: -webkit-linear-gradient(top, $color-primary 0%, $color-tertiary 50%, $color-secondary 100%);
+        background: linear-gradient(to bottom, $color-primary 0%, $color-tertiary 50%, $color-secondary 100%);
+    }
+
+    .formulaire{
+        width: 70%;
+    }
+
+    .introTexte{
+        width: 70%;
+    }
+
+    .fonctionnement{
+        width: 70%;
+        margin: auto;
+    }
+
+    .card{
+        width: 50%;
+        margin-bottom: 4%;
+    }
+    
+    .restaurants{
+        width: 70%;
+        margin: auto;
+        padding-bottom: 5%;
+
+        h2{
+            padding-left: 10%;
+        }
+    }
+
+    .menus{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        margin: 5%;
+    }
+
+    .carte{
+        width: 45%;
+    }
+}
+
+@media all and (min-width: 1400px){
+    .card{
+        width: 35%;
+        padding-right: 10%;
+    }
 }
