--- a/css/restaurants.css
+++ b/css/restaurants.css
@@ -62,6 +62,8 @@ header nav img {
 }
 header .arrow {
   text-decoration: none;
+  font-size: 120%;
+  color: black;
 }
 
 footer {
@@ -109,7 +111,9 @@ footer a {
 .menu {
   border-radius: 50px 50px 0 0;
   background-color: rgb(243, 243, 243);
-  padding-top: 5%;
+  padding-top: 4%;
+  margin-top: -14%;
+  position: relative;
 }
 
 .carte {
@@ -119,7 +123,7 @@ footer a {
 }
 .carte h1 {
   font-family: Shrikhand;
-  font-size: 185%;
+  font-size: 180%;
   margin-left: 4.5%;
 }
 h2 {
@@ -137,24 +141,51 @@ h2 {
 }
 .ensemble button {
   margin-top: 10%;
+  margin-bottom: 20%;
 }
 
 .card {
   display: flex;
-  justify-content: space-between;
   background-color: white;
   box-shadow: 8px 7px 15px -6px rgba(0, 0, 0, 0.7);
   border-radius: 15px;
   width: 90%;
   margin-bottom: 5%;
+  overflow: hidden;
+}
+.card .texte {
+  flex-grow: 1;
+  width: 100px;
 }
 .card .texte h3, .card .texte p {
   margin: 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .card .prix {
   margin-top: 7%;
-  margin-right: 6%;
+  padding-right: 6%;
   font-weight: bold;
+}
+.card .check {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #99E2D0;
+  width: 0px;
+  transition: 0.5s ease-in-out;
+}
+.card .valide {
+  font-size: 150%;
+  color: white;
+  transition: 0.5s ease-in-out;
+}
+.card:hover .valide {
+  transform: rotate(1turn);
+}
+.card:hover .check {
+  width: 23%;
 }
 
 @media all and (min-width: 992px) {
@@ -162,5 +193,30 @@ h2 {
     margin: auto;
     background: #9356DC;
     background: linear-gradient(to bottom, #9356DC 0%, #99E2D0 50%, #FF79DA 100%);
+  }
+  .background {
+    display: flex;
+    justify-content: center;
+  }
+  .background img {
+    width: 70%;
+    height: 550px;
+  }
+  .tout {
+    display: flex;
+    justify-content: center;
+  }
+  .menu {
+    width: 70%;
+  }
+  .card {
+    width: 75%;
+  }
+  .ensemble button {
+    margin-top: 5%;
+    margin-bottom: 10%;
+  }
+  .card:hover .check {
+    width: 15%;
   }
 }/*# sourceMappingURL=restaurants.css.map */
