--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,97 @@ footer a {
   font-family: Roboto, "'Times New Roman', Times, serif", Shrikhand;
 }
 
+.loader {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: #99E2D0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  -webkit-animation: chargement 4s forwards;
+          animation: chargement 4s forwards;
+  /*span{
+      position: absolute;
+      width: 50px;
+      height: 50px;
+      border: 10px, solid transparent;
+      border-top-color: conic-gradient($color-primary, $color-secondary, $color-tertiary);
+      border-radius: 50%;
+      z-index: 2;
+      animation: spinner 1.2s linear infinite;
+  }
+
+  span:nth-child(2){
+      border: 10px solid transparent;
+      border-bottom-color: conic-gradient($color-primary, $color-secondary, $color-tertiary);
+   }*/
+}
+
+@-webkit-keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+    border-width: 10px;
+  }
+  50% {
+    transform: rotate(180deg);
+    border-width: 1px;
+  }
+  100% {
+    transform: rotate(360deg);
+    border-width: 10px;
+  }
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+    border-width: 10px;
+  }
+  50% {
+    transform: rotate(180deg);
+    border-width: 1px;
+  }
+  100% {
+    transform: rotate(360deg);
+    border-width: 10px;
+  }
+}
+@-webkit-keyframes chargement {
+  0% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0.75;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  75% {
+    opacity: 0.25;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes chargement {
+  0% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0.75;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  75% {
+    opacity: 0.25;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 nav {
   display: flex;
   justify-content: center;
@@ -230,8 +321,6 @@ form [type=search] {
 @media all and (min-width: 992px) {
   body {
     margin: auto;
-    background: #9356DC;
-    background: linear-gradient(to bottom, #9356DC 0%, #99E2D0 50%, #FF79DA 100%);
   }
   .formulaire {
     width: 70%;
