--- a/css/style.css
+++ b/css/style.css
@@ -90,24 +90,22 @@ footer a {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1;
-  -webkit-animation: chargement 4s forwards;
-          animation: chargement 4s forwards;
-  /*span{
-      position: absolute;
-      width: 50px;
-      height: 50px;
-      border: 10px, solid transparent;
-      border-top-color: conic-gradient($color-primary, $color-secondary, $color-tertiary);
-      border-radius: 50%;
-      z-index: 2;
-      animation: spinner 1.2s linear infinite;
-  }
-
-  span:nth-child(2){
-      border: 10px solid transparent;
-      border-bottom-color: conic-gradient($color-primary, $color-secondary, $color-tertiary);
-   }*/
+  -webkit-animation: chargement 1s 5s forwards;
+          animation: chargement 1s 5s forwards;
+}
+.loader span {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  border: 10px solid transparent;
+  border-top-color: #9356DC;
+  border-radius: 50%;
+  -webkit-animation: spinner 1.2s linear infinite;
+          animation: spinner 1.2s linear infinite;
+}
+.loader span:nth-child(2) {
+  border: 10px solid transparent;
+  border-bottom-color: #FF79DA;
 }
 
 @-webkit-keyframes spinner {
