--- a/style.scss
+++ b/style.scss
@@ -19,24 +19,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1;
-    animation: chargement 4s forwards;
+    animation: chargement 1s 5s forwards;
 
-    /*span{
+    span{
         position: absolute;
-        width: 50px;
-        height: 50px;
-        border: 10px, solid transparent;
-        border-top-color: conic-gradient($color-primary, $color-secondary, $color-tertiary);
+        width: 100px;
+        height: 100px;
+        border: 10px solid transparent;
+        border-top-color: $color-primary;
         border-radius: 50%;
-        z-index: 2;
         animation: spinner 1.2s linear infinite;
     }
 
     span:nth-child(2){
         border: 10px solid transparent;
-        border-bottom-color: conic-gradient($color-primary, $color-secondary, $color-tertiary);
-     }*/
+        border-bottom-color: $color-secondary;
+    }
 }
 
 @keyframes spinner{
