Mise à jour loader + background

--- a/css/restaurants.css
+++ b/css/restaurants.css
@@ -253,6 +253,7 @@ h2 {
 @media all and (min-width: 992px) {
   body {
     margin: auto;
+    background: linear-gradient(rgb(243, 243, 243), #99E2D0);
   }
   .background {
     display: flex;
