--- a/style.scss
+++ b/style.scss
@@ -3,15 +3,17 @@
 @import "./composants/animacoeur";
 @import "./layout/footer";
 
-*{
-    -moz-box-sizing    : border-box; /* Firefox */
-    -webkit-box-sizing : border-box; /* Safari */
-    box-sizing         : border-box;
+* {
+    -moz-box-sizing: border-box;
+    /* Firefox */
+    -webkit-box-sizing: border-box;
+    /* Safari */
+    box-sizing: border-box;
     list-style-type: none;
-    font-family: Roboto, "'Times New Roman', Times, serif",Shrikhand;
+    font-family: Roboto, "'Times New Roman', Times, serif", Shrikhand;
 }
 
-.loader{
+.loader {
     position: fixed;
     width: 100%;
     height: 100%;
@@ -19,9 +21,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    animation: chargement 1s 5s forwards;
+    z-index: -3;
+    animation: chargement 1s 2s forwards;
 
-    span{
+    span {
         position: absolute;
         width: 100px;
         height: 100px;
@@ -31,74 +34,79 @@
         animation: spinner 1.2s linear infinite;
     }
 
-    span:nth-child(2){
+    span:nth-child(2) {
         border: 10px solid transparent;
         border-bottom-color: $color-secondary;
     }
 }
 
-@keyframes spinner{
-    0%{
-        transform: rotate(0deg); 
+@keyframes spinner {
+    0% {
+        transform: rotate(0deg);
         border-width: 10px;
     }
 
-    50%{
-        transform: rotate(180deg); 
+    50% {
+        transform: rotate(180deg);
         border-width: 1px;
     }
 
-    100%{
-        transform: rotate(360deg); 
+    100% {
+        transform: rotate(360deg);
         border-width: 10px;
     }
 }
 
-@keyframes chargement{
-    0%{
+.load {
+    animation: load 1s 2s backwards;
+}
+
+
+@keyframes chargement {
+    0% {
         opacity: 1;
     }
 
-    25%{
+    25% {
         opacity: .75;
     }
 
-    50%{
+    50% {
         opacity: .5;
     }
 
-    75%{
+    75% {
         opacity: .25;
     }
 
-    100%{
+    100% {
         opacity: 0;
     }
 }
 
-@keyframes load{
-    0%{
+@keyframes load {
+    0% {
         opacity: 0;
     }
 
-    25%{
+    25% {
         opacity: .25;
     }
 
-    50%{
+    50% {
         opacity: .5;
     }
 
-    75%{
+    75% {
         opacity: .75;
     }
 
-    100%{
+    100% {
         opacity: 1;
     }
 }
 
-nav{
+nav {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -106,32 +114,38 @@ nav{
     padding-top: 10px;
 }
 
-nav img{
+nav img {
     width: 200px;
     height: 50px;
     padding-bottom: 10px;
 }
 
-.formulaire{
+.formulaire {
     background-color: lightgray;
-    -webkit-box-shadow: inset 0px 2px 5px 2px rgba(0,0,0,0.5); 
-    box-shadow: inset 0px 2px 5px 2px rgba(0,0,0,0.5);
+    -webkit-box-shadow: inset 0px 2px 5px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: inset 0px 2px 5px 2px rgba(0, 0, 0, 0.5);
     padding: 15px;
     width: 100%;
     display: flex;
     justify-content: center;
 }
 
-form [type=search]{
+form [type=search] {
     background-color: lightgray;
     border: none;
 }
 
-button{
+.button {
     @extend .button
 }
 
-.introTexte{
+.button p{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.introTexte {
     background-color: $color-background;
     height: 250px;
     display: flex;
@@ -140,36 +154,36 @@ button{
     width: 100%;
 }
 
-.fonctionnement{
+.fonctionnement {
     width: 100%;
     margin-bottom: 10%;
 
-    h2{
+    h2 {
         display: flex;
         margin-left: 8%;
     }
 }
 
-.fonctioncard{
+.fonctioncard {
     display: flex;
     align-items: center;
     flex-direction: column;
     width: 100%;
 }
 
-.card{
+.card {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 80%;
-    background-color: $color-background; 
+    background-color: $color-background;
     border-radius: 20px;
     padding-right: 15%;
     margin-bottom: 8%;
-    box-shadow: 8px 7px 15px -6px rgba(0,0,0,0.70);
-    
-    
-    .number{
+    box-shadow: 8px 7px 15px -6px rgba(0, 0, 0, 0.70);
+
+
+    .number {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -181,74 +195,74 @@ button{
         margin-left: -12px;
     }
 
-    .icon{
+    .icon {
         color: $color-primary;
     }
 
     &:hover {
         background-color: rgb(239, 233, 239);
 
-        .icon{
+        .icon {
             filter: brightness(115%);
         }
     }
 }
 
-.restaurants{
+.restaurants {
     padding-top: 5%;
     background-color: $color-background;
     width: 100%;
 
-    h2{
+    h2 {
         padding-left: 8%;
     }
 }
 
-.menus{
+.menus {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
-.carte{
+.carte {
     border-radius: 15px;
-    box-shadow: 8px 7px 15px -6px rgba(0,0,0,0.70);
+    box-shadow: 8px 7px 15px -6px rgba(0, 0, 0, 0.70);
     width: 85%;
     margin-bottom: 5%;
     position: relative;
-    animation: load 1s 5s backwards;
 
-    img{
-       border-radius: 15px 15px 0px 0px;
+
+    img {
+        border-radius: 15px 15px 0px 0px;
         object-fit: cover;
         height: 160px;
-        width: 100%; 
+        width: 100%;
     }
 
-    a{
+    a {
         text-decoration: none;
     }
 
-    .content{
+    .content {
         display: flex;
         justify-content: space-between;
     }
 
-    h3{
+    h3 {
         margin: 15px 0 0 15px;
         color: black;
     }
 
-    .lieu{
+    .lieu {
         margin: 5px 0 20px 15px;
         color: black;
     }
 
-    .new{
+    .new {
         margin: 10px;
-        color: green;
-        background-color: lightgreen;
+        color: darken($color: $color-tertiary, $amount: 45%);
+        background-color: $color-tertiary;
         border-radius: 5px;
         height: 30px;
         width: 90px;
@@ -260,50 +274,50 @@ button{
         right: 0;
     }
 
-    .animacoeur{
+    .animacoeur {
         @extend animacoeur
     }
 }
 
-footer{
+footer {
     @extend footer
 }
 
-@media all and (min-width: 992px){
-    body{
+@media all and (min-width: 992px) {
+    body {
         margin: auto;
         background: linear-gradient($color-background, $color-tertiary);
     }
 
-    .formulaire{
+    .formulaire {
         width: 70%;
     }
 
-    .introTexte{
+    .introTexte {
         width: 70%;
     }
 
-    .fonctionnement{
+    .fonctionnement {
         width: 70%;
         margin: auto;
     }
 
-    .card{
+    .card {
         width: 50%;
         margin-bottom: 4%;
     }
-    
-    .restaurants{
+
+    .restaurants {
         width: 70%;
         margin: auto;
         padding-bottom: 5%;
 
-        h2{
+        h2 {
             padding-left: 10%;
         }
     }
 
-    .menus{
+    .menus {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
@@ -311,13 +325,13 @@ footer{
         margin: 5%;
     }
 
-    .carte{
+    .carte {
         width: 45%;
     }
 }
 
-@media all and (min-width: 1400px){
-    .card{
+@media all and (min-width: 1400px) {
+    .card {
         width: 35%;
         padding-right: 10%;
     }
